--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
   <title>Web Test Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f0f4f8;
-      padding: 40px;
-      max-width: 800px;
-      margin: auto;
+      margin: 0;
+      padding: 20px;
+      font-size: 18px;
     }
     h1 {
       text-align: center;
@@ -20,6 +21,7 @@
     }
     h2, h3 {
       color: #333;
+      margin-top: 20px;
     }
     textarea {
       width: 100%;
@@ -29,10 +31,12 @@
       border: 1px solid #ccc;
       margin-bottom: 10px;
       box-sizing: border-box;
+      resize: vertical;
     }
     button {
+      width: 100%;
       font-size: 16px;
-      padding: 10px 20px;
+      padding: 12px;
       background-color: #0078D4;
       color: white;
       border: none;
@@ -47,7 +51,7 @@
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 15px;
-      margin-bottom: 15px;
+      margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
     .timestamp {
@@ -60,7 +64,7 @@
 <body>
   <h1>Web Test Demo</h1>
   <h2>📝 Ghi chú trực tuyến</h2>
-  <textarea id="noteInput" rows="5" placeholder="Nhập ghi chú tại đây..."></textarea><br>
+  <textarea id="noteInput" rows="5" placeholder="Nhập ghi chú tại đây..."></textarea>
   <button onclick="saveNote()">Lưu ghi chú</button>
 
   <h3>📌 Ghi chú đã lưu:</h3>
