--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
       resize: vertical;
     }
     button {
-      width: 100%;
       font-size: 16px;
-      padding: 12px;
+      padding: 10px 20px;
       background-color: #0078D4;
       color: white;
       border: none;
@@ -53,11 +52,27 @@
       padding: 15px;
       margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      position: relative;
     }
     .timestamp {
       font-size: 14px;
       color: #888;
       margin-top: 8px;
+    }
+    .delete-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background-color: #e74c3c;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      padding: 5px 10px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .delete-btn:hover {
+      background-color: #c0392b;
     }
   </style>
 </head>
@@ -97,11 +112,21 @@
       });
     }
 
+    function deleteNote(noteId) {
+      const password = prompt("Nhập mật khẩu để xóa ghi chú:");
+      if (password === "898989") {
+        database.ref("notes/" + noteId).remove();
+      } else {
+        alert("Sai mật khẩu. Không thể xóa ghi chú.");
+      }
+    }
+
     database.ref("notes").on("value", function(snapshot) {
       var noteList = document.getElementById("noteList");
       noteList.innerHTML = "";
       snapshot.forEach(function(childSnapshot) {
         var data = childSnapshot.val();
+        var noteId = childSnapshot.key;
         var note = data.content;
         var time = formatDate(data.timestamp);
 
@@ -115,8 +140,16 @@
         timestamp.className = "timestamp";
         timestamp.textContent = "🕒 " + time;
 
+        var deleteBtn = document.createElement("button");
+        deleteBtn.className = "delete-btn";
+        deleteBtn.textContent = "Xóa";
+        deleteBtn.onclick = function() {
+          deleteNote(noteId);
+        };
+
         card.appendChild(content);
         card.appendChild(timestamp);
+        card.appendChild(deleteBtn);
         noteList.appendChild(card);
       });
     });
