--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
     .delete-btn:hover {
       background-color: #c0392b;
     }
-    #message {
-      margin-top: 10px;
+    .deleted-label {
+      position: absolute;
+      top: 10px;
+      right: 10px;
       color: green;
       font-weight: bold;
+      font-size: 14px;
     }
     #downloadBtn {
       display: block;
@@ -109,7 +112,6 @@
   <h2>📝 Ghi chú trực tuyến</h2>
   <textarea id="noteInput" rows="5" placeholder="Nhập ghi chú tại đây..."></textarea>
   <button onclick="saveNote()">Lưu ghi chú</button>
-  <div id="message"></div>
 
   <h3>📌 Ghi chú đã lưu:</h3>
   <div id="noteList"></div>
@@ -147,14 +149,15 @@
       });
     }
 
-    function deleteNote(noteId) {
+    function deleteNote(noteId, cardElement) {
       const password = prompt("Nhập mật khẩu để xóa ghi chú:");
       if (password === "898989") {
         database.ref("notes/" + noteId).remove();
-        document.getElementById("message").textContent = "✅ Đã xoá";
-        setTimeout(() => {
-          document.getElementById("message").textContent = "";
-        }, 3000);
+        const label = document.createElement("div");
+        label.className = "deleted-label";
+        label.textContent = "✅ Đã xoá";
+        cardElement.innerHTML = "";
+        cardElement.appendChild(label);
       } else {
         alert("Sai mật khẩu. Không thể xóa ghi chú.");
       }
@@ -200,7 +203,7 @@
         deleteBtn.className = "delete-btn";
         deleteBtn.textContent = "Xóa";
         deleteBtn.onclick = function() {
-          deleteNote(noteId);
+          deleteNote(noteId, card);
         };
 
         card.appendChild(content);
