--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           content += `📝 ${data.content}\n🕒 ${time}\n\n`;
         });
 
-        const blob = new Blob([content], { type: "text/plain" });
+        const blob = new Blob(["\uFEFF" + content], { type: "text/plain;charset=utf-8" });
         const link = document.createElement("a");
         link.href = URL.createObjectURL(blob);
         link.download = "ghi_chu.txt";
