--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 15px;
+      padding-bottom: 50px;
       margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
       position: relative;
@@ -64,7 +65,7 @@
     }
     .delete-btn {
       position: absolute;
-      top: 10px;
+      bottom: 10px;
       right: 10px;
       background-color: #e74c3c;
       color: white;
@@ -79,7 +80,7 @@
     }
     .deleted-label {
       position: absolute;
-      top: 10px;
+      bottom: 10px;
       right: 10px;
       color: green;
       font-weight: bold;
@@ -132,21 +133,13 @@
       font-weight: bold;
       text-align: center;
       z-index: 1000;
-      display: none;
-      animation: slideDown 0.3s ease-out;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease-out, visibility 0.3s ease-out;
     }
     #message.show {
-      display: block;
-    }
-    @keyframes slideDown {
-      from {
-        top: -50px;
-        opacity: 0;
-      }
-      to {
-        top: 20px;
-        opacity: 1;
-      }
+      opacity: 1;
+      visibility: visible;
     }
     .warning {
       color: #e74c3c !important;
