--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>App Tạo Ảnh Thẻ AI</title>
-  <!-- React + Babel -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>App Tạo Ảnh Thẻ AI - Gemini API</title>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
   <div id="root"></div>
@@ -17,150 +15,36 @@
   <script type="text/babel">
     const { useState } = React;
 
-    // --- Các icon SVG ---
-    const UploadCloud = ({ className="w-6 h-6" }) => (
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-        stroke="currentColor" strokeWidth="2" className={className}>
-        <path d="M4 14.9A7 7 0 1 1 15.7 8h1.8a4.5 4.5 0 0 1 2.5 8.2" />
-        <path d="M12 12v9" />
-        <path d="m16 16-4-4-4 4" />
-      </svg>
+    // --- Ghi chú đầu trang ---
+    const Notice = () => (
+      <div className="bg-yellow-50 border border-yellow-300 text-yellow-900 px-4 py-3 rounded-lg shadow-sm mb-6 text-center max-w-3xl mx-auto">
+        <p className="text-sm sm:text-base font-medium">
+          🔐 <strong>Lưu ý:</strong> Ứng dụng này sử dụng <span class="font-semibold text-blue-700">Gemini API của Google</span>. 
+          Vui lòng <span class="underline font-semibold">đăng nhập tài khoản Google</span> của bạn trước khi tạo ảnh để hệ thống hoạt động chính xác.
+        </p>
+      </div>
     );
 
-    const Download = ({ className="w-6 h-6" }) => (
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-        stroke="currentColor" strokeWidth="2" className={className}>
-        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
-        <polyline points="7 10 12 15 17 10" />
-        <line x1="12" y1="15" x2="12" y2="3" />
-      </svg>
-    );
+    // --- App chính ---
+    const App = () => (
+      <div className="flex flex-col items-center min-h-screen p-6 sm:p-10">
+        <header className="text-center mb-6">
+          <h1 className="text-3xl sm:text-4xl font-bold text-gray-900">App Tạo Ảnh Thẻ AI</h1>
+          <p className="mt-2 text-gray-600 text-lg">Tạo ảnh thẻ 4x6 chuyên nghiệp, nền trắng và xanh, bằng trí tuệ nhân tạo Gemini.</p>
+        </header>
 
-    const Wand2 = ({ className="w-6 h-6" }) => (
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-        stroke="currentColor" strokeWidth="2" className={className}>
-        <path d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.71 0L11.5 9.51..." />
-      </svg>
-    );
+        <Notice />
 
-    const Loader = ({ className="w-6 h-6" }) => (
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-        stroke="currentColor" strokeWidth="2" className={className + " animate-spin"}>
-        <path d="M21 12a9 9 0 1 1-6.219-8.56" />
-      </svg>
-    );
-
-    // --- Tùy chọn trang phục ---
-    const clothingOptions = [
-      { value: "white shirt and tie", label: "Sơ mi trắng và cà vạt" },
-      { value: "business suit with shirt and tie", label: "Vest doanh nhân" },
-      { value: "graduation gown with shirt and tie", label: "Lễ phục tốt nghiệp" },
-      { value: "polo shirt", label: "Áo polo" },
-    ];
-
-    // --- Hàm gọi API Gemini (tạm để trống API Key) ---
-    const callGeminiApi = async (base64Data, mimeType, prompt) => {
-      const apiKey = ""; // điền API key thật nếu có
-      const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-image-preview:generateContent?key=${apiKey}`;
-      const payload = {
-        contents: [{
-          parts: [
-            { text: prompt },
-            { inlineData: { mimeType, data: base64Data } }
-          ]
-        }],
-        generationConfig: { responseModalities: ['IMAGE'] },
-      };
-      const response = await fetch(apiUrl, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(payload)
-      });
-      const result = await response.json();
-      const img = result?.candidates?.[0]?.content?.parts?.find(p => p.inlineData);
-      return img ? `data:${img.inlineData.mimeType};base64,${img.inlineData.data}` : null;
-    };
-
-    // --- Thành phần chính ---
-    function App() {
-      const [originalImage, setOriginalImage] = useState(null);
-      const [originalMimeType, setOriginalMimeType] = useState('');
-      const [selectedClothing, setSelectedClothing] = useState(clothingOptions[0].value);
-      const [whiteBg, setWhiteBg] = useState(null);
-      const [blueBg, setBlueBg] = useState(null);
-      const [loading, setLoading] = useState(false);
-      const [error, setError] = useState(null);
-
-      const handleUpload = e => {
-        const file = e.target.files?.[0];
-        if (!file) return;
-        setOriginalMimeType(file.type);
-        const reader = new FileReader();
-        reader.onload = ev => setOriginalImage(ev.target.result);
-        reader.readAsDataURL(file);
-      };
-
-      const buildPrompt = (cloth, bg) => `
-        Create a 4x6 ID photo. Replace outfit with ${cloth}.
-        Background: ${bg === 'white' ? 'pure white (#FFFFFF)' : 'royal blue (#4169E1)'}.
-      `;
-
-      const generate = async () => {
-        if (!originalImage) return setError("Vui lòng tải ảnh trước.");
-        setLoading(true);
-        setError(null);
-        const base64 = originalImage.split(',')[1];
-        try {
-          const white = await callGeminiApi(base64, originalMimeType, buildPrompt(selectedClothing, "white"));
-          setWhiteBg(white);
-          const blue = await callGeminiApi(base64, originalMimeType, buildPrompt(selectedClothing, "blue"));
-          setBlueBg(blue);
-        } catch (e) {
-          setError("Lỗi khi tạo ảnh: " + e.message);
-        }
-        setLoading(false);
-      };
-
-      return (
-        <div className="min-h-screen flex flex-col items-center py-6">
-          <h1 className="text-3xl font-bold mb-4">App Tạo Ảnh Thẻ AI</h1>
-          <p className="text-gray-600 mb-6">Tải ảnh chân dung, chọn trang phục và tạo nền trắng hoặc xanh tự động.</p>
-
-          <div className="bg-white p-6 rounded-lg shadow-lg w-full max-w-4xl grid gap-6 md:grid-cols-3">
-            <div className="space-y-4">
-              <label className="block font-semibold">Tải ảnh chân dung:</label>
-              <input type="file" accept="image/*" onChange={handleUpload} className="border p-2 rounded w-full" />
-              {originalImage && <img src={originalImage} className="rounded-lg" alt="Ảnh gốc" />}
-              <label className="block font-semibold">Chọn trang phục:</label>
-              <select value={selectedClothing} onChange={e => setSelectedClothing(e.target.value)} className="border p-2 rounded w-full">
-                {clothingOptions.map(o => <option key={o.value} value={o.value}>{o.label}</option>)}
-              </select>
-              <button onClick={generate} disabled={loading} className="bg-blue-600 text-white w-full py-2 rounded hover:bg-blue-700 disabled:opacity-50">
-                {loading ? "Đang xử lý..." : "Tạo lại ảnh"}
-              </button>
-              {error && <div className="text-red-600 text-sm">{error}</div>}
-            </div>
-
-            <div className="md:col-span-2 grid grid-cols-2 gap-4">
-              <div className="border p-2 rounded text-center">
-                <h3 className="font-semibold mb-2">Nền trắng</h3>
-                {loading ? <Loader className="w-8 h-8 mx-auto"/> :
-                  whiteBg ? <img src={whiteBg} alt="Nền trắng" className="rounded"/> :
-                  <div className="text-gray-500">Chưa có ảnh</div>}
-              </div>
-              <div className="border p-2 rounded text-center">
-                <h3 className="font-semibold mb-2">Nền xanh</h3>
-                {loading ? <Loader className="w-8 h-8 mx-auto"/> :
-                  blueBg ? <img src={blueBg} alt="Nền xanh" className="rounded"/> :
-                  <div className="text-gray-500">Chưa có ảnh</div>}
-              </div>
-            </div>
-          </div>
+        <div className="max-w-2xl w-full bg-white p-6 rounded-lg shadow-md">
+          <p className="text-gray-700 text-center">
+            Đây là phiên bản React demo — bạn có thể nhúng mã xử lý chính (App.js) ở đây. 
+            Hệ thống yêu cầu người dùng đã đăng nhập Google để có thể truy cập API của Gemini cho quá trình xử lý ảnh.
+          </p>
         </div>
-      );
-    }
+      </div>
+    );
 
-    ReactDOM.createRoot(document.getElementById("root")).render(<App />);
+    ReactDOM.render(<App />, document.getElementById("root"));
   </script>
 </body>
 </html>
