--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       try {
         initAudioContext();
         // Phát thử nốt để iOS/Chrome kích hoạt context
-        const testAudio = new Audio('https://github.com/Nhut11790/nhut11790.github.io/raw/refs/heads/main/tieng/acoustic_grand_piano-mp3/C3.mp3');
+        const testAudio = new Audio('https://raw.githubusercontent.com/nhut990/files/refs/heads/main/tieng/E3_active_audio.mp3');
         testAudio.volume = 0.3;
         await new Promise((resolve, reject) => {
           testAudio.addEventListener('canplaythrough', () => {
