--- a/index.html
+++ b/index.html
@@ -366,11 +366,13 @@
         let isMicActive = false;
         let player;
 
+        let playerReady = false;
+
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('youtubePlayer', {
                 height: '100%',
                 width: '100%',
-                videoId: 'dQw4w9WgXcQ',
+                videoId: '',
                 playerVars: {
                     'autoplay': 0,
                     'controls': 1,
@@ -383,6 +385,7 @@
         }
 
         function onPlayerReady(event) {
+            playerReady = true;
             player.setVolume(50);
         }
 
@@ -417,7 +420,12 @@
 
             const videoId = extractVideoId(input);
             if (videoId) {
-                player.loadVideoById(videoId);
+                if (playerReady && player) {
+                    player.loadVideoById(videoId);
+                    player.playVideo();
+                } else {
+                    alert('Player chưa sẵn sàng, vui lòng đợi vài giây và thử lại!');
+                }
             } else {
                 alert('Link YouTube không hợp lệ! Vui lòng nhập link đúng định dạng.');
             }
