--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                 <li>Dán link YouTube video karaoke</li>
                 <li>Nhấn "Bật Micro" và cho phép micro</li>
                 <li>Cắm tai nghe để tránh hú (quan trọng!)</li>
+                <li><strong>iOS:</strong> Dùng nút âm lượng trên video để giảm nhạc nền</li>
                 <li>Điều chỉnh hiệu ứng theo ý thích</li>
             </ul>
         </div>
@@ -266,16 +267,16 @@
                 <div class="control-row">
                     <div class="control-label">
                         <span class="label-text">Micro</span>
-                        <span class="value-display" id="micVolumeVal">100%</span>
+                        <span class="value-display" id="micVolumeVal">150%</span>
                     </div>
-                    <input type="range" id="micVolume" min="0" max="200" value="100" />
+                    <input type="range" id="micVolume" min="0" max="200" value="150" />
                 </div>
                 <div class="control-row">
                     <div class="control-label">
                         <span class="label-text">Nhạc</span>
-                        <span class="value-display" id="musicVolumeVal">50%</span>
+                        <span class="value-display" id="musicVolumeVal">30%</span>
                     </div>
-                    <input type="range" id="musicVolume" min="0" max="100" value="50" />
+                    <input type="range" id="musicVolume" min="0" max="100" value="30" />
                 </div>
             </div>
             
