--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@
                     <option value="sus4">sus4</option>
                     <option value="6">6 (Major 6th)</option>
                     <option value="m6">m6 (Minor 6th)</option>
-                    <option value="9">9 (Dominant 9th)</option>
-                    <option value="maj9">maj9 (Major 9th)</option>
-                    <option value="m9">m9 (Minor 9th)</option>
-                    <option value="add9">add9</option>
                 </select>
             </div>
         </div>
@@ -157,9 +153,7 @@
             'm7': [0, 3, 7, 10],       'dim': [0, 3, 6],
             'aug': [0, 4, 8],          'sus2': [0, 2, 7],
             'sus4': [0, 5, 7],         '6': [0, 4, 7, 9],
-            'm6': [0, 3, 7, 9],        '9': [0, 4, 7, 10, 14],
-            'maj9': [0, 4, 7, 11, 14], 'm9': [0, 3, 7, 10, 14],
-            'add9': [0, 4, 7, 14]
+            'm6': [0, 3, 7, 9]
         };
         const notes = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
         let currentChordNotes = [];
@@ -422,8 +416,7 @@
             const chordNames = {
                 'major': '', 'minor': 'm', '7': '7', 'maj7': 'maj7',
                 'm7': 'm7', 'dim': 'dim', 'aug': 'aug', 'sus2': 'sus2',
-                'sus4': 'sus4', '6': '6', 'm6': 'm6', '9': '9',
-                'maj9': 'maj9', 'm9': 'm9', 'add9': 'add9'
+                'sus4': 'sus4', '6': '6', 'm6': 'm6'
             };
             document.getElementById('chordName').textContent = root + chordNames[chordType];
             document.getElementById('chordNotes').textContent = currentChordNotes.map(n => n.replace('#', '♯')).join(' - ');
