--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
         }
         .chord-name { font-size: 20px; font-weight: bold; color: #667eea; margin-bottom: 5px;}
         .chord-notes { font-size: 14px; color: #666;}
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            padding-top: 15px;
+            border-top: 1px solid #e0e0e0;
+            color: #999;
+            font-size: 12px;
+        }
         @media (max-width: 480px) {
             h1 { font-size: 20px; }
             .white-key { width: 24px; height: 150px;}
@@ -139,6 +147,9 @@
         <div class="chord-info">
             <div class="chord-name" id="chordName">C Major</div>
             <div class="chord-notes" id="chordNotes">C4 - E4 - G4</div>
+        </div>
+        <div class="footer">
+            Created by Minh Nhựt © 2025
         </div>
     </div>
     <script>
